--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 ========================================= 
 ========================================= 
 
-Designer Template By Bootstrapious.com
+Designer Template By Bootstrapious.com 
 
 ========================================= 
 ========================================= */
@@ -537,7 +537,6 @@ STYLE SWITCHER FOR DEMO
 /* navbar */
 .navbar {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
-  min-height: 100px;
   margin-bottom: 0;
   border-top: none;
   border-bottom: none;
@@ -605,9 +604,7 @@ STYLE SWITCHER FOR DEMO
 .navbar-brand {
   float: left;
   padding: 10px 15px;
-  font-size: 20px;
-  line-height: 24px;
-  height: 100px;
+  font-size: 30px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -620,17 +617,15 @@ STYLE SWITCHER FOR DEMO
   }
 }
 .navbar-toggle {
-  padding: 9px 10px !important;
-  margin-right: 15px;
-  border-radius: 0;
+  margin: 13px 15px 13px 0;
 }
 .navbar-nav {
   margin: 19px -15px;
 }
 .navbar-nav > li > a {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  line-height: 24px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 18px;
 }
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu > li > a,
@@ -703,7 +698,7 @@ STYLE SWITCHER FOR DEMO
   }
 }
 .navbar-default {
-  background-color: #b3cad8;
+  background-color: #85cbfc;
   border-bottom-color: transparent;
 }
 .navbar-default .navbar-brand {
